--- a/pkg/pages/about.templ
+++ b/pkg/pages/about.templ
@@ -1,10 +1,18 @@
 package pages
 
+import "golang.org/x/text/message"
 
+func about(p *message.Printer) string {
+	return p.Sprintf("About ")
+}
 
-templ About() {
+func about_d(p *message.Printer) string {
+	return p.Sprintf("ReserVe.Me is a place to find the perfect campsite on private property or the perfect place to list your private campsites.  We let you list publically or on an invite-only basis to members you invite.  You can define campsites via geofencing, upload pictures, pdfs and other assets associated with spots and create templates for easy re-use throughout your property")
+}
+
+templ About(p *message.Printer) {
 	<h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl dark:text-white">
-		About <span class="text-emerald-600">ServerCore</span>
+		{ about(p) } <span class="text-emerald-600">{ title(p) }</span>
 	</h1>
-	<p class="text-gray-500 dark:text-gray-400">ServerCore is a hypermedia application written with go, templ, sqlite and htmx</p>;
+	<p class="text-gray-500 dark:text-gray-400">{ about_d(p) }</p>
 }
