--- a/pkg/pages/contact.templ
+++ b/pkg/pages/contact.templ
@@ -1,8 +1,18 @@
 package pages
 
-templ Contact() {
+import "golang.org/x/text/message"
+
+func contact(p *message.Printer) string {
+	return p.Sprintf("Contact ")
+}
+
+func c_d(p *message.Printer) string {
+	return p.Sprintf("Please feel free to reach out to us by any of the means listed below.")
+}
+
+templ Contact(p *message.Printer) {
 	<h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl dark:text-white">
-		Contact <span class="text-emerald-600">ServerCore</span>
+		{ contact(p) } <span class="text-emerald-600">{ title(p) }</span>
 	</h1>
-	<p class="text-gray-500 dark:text-gray-400">ServerCore is a hypermedia application written with go, templ, sqlite and htmx</p>;
+	<p class="text-gray-500 dark:text-gray-400">{ c_d(p) }</p>
 }
