--- a/pkg/components/main-content.templ
+++ b/pkg/components/main-content.templ
@@ -3,7 +3,8 @@ package components
 templ MainContent() {
 	<main
 		id="main"
-		class="container flex-1"
+		class="main-content container flex-1"
+		hx-history-elt="true"
 	>
 		{ children... }
 	</main>
