--- a/pkg/layouts/html-doc.templ
+++ b/pkg/layouts/html-doc.templ
@@ -2,11 +2,10 @@ package layouts
 
 import c "core/pkg/components"
 
-
 var links = []c.LinkProps{
-	{Title: "Home", HxGet: "/", HxTarget: "#main", HxSwap: "innerHTML"},
-	{Title: "About", HxGet: "/about", HxTarget: "#main", HxSwap: "innerHTML"},
-	{Title: "Contact", HxGet: "/contact", HxTarget: "#main", HxSwap: "innerHTML"},
+	{Title: "Home", HxGet: "/", HxTarget: "#main", HxSwap: "outerHTML transition:true"},
+	{Title: "About", HxGet: "/about", HxTarget: "#main", HxSwap: "outerHTML transition:true"},
+	{Title: "Contact", HxGet: "/contact", HxTarget: "#main", HxSwap: "outerHTML transition:true"},
 }
 
 templ HtmlDoc(app_title string, contents templ.Component) {
@@ -16,8 +15,8 @@ templ HtmlDoc(app_title string, contents templ.Component) {
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<title>{ app_title }</title>
-			<link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
-			<link rel="icon" type="image/png" href="/images/favicon.png">
+			<link rel="icon" type="image/svg+xml" href="/images/favicon.svg"/>
+			<link rel="icon" type="image/png" href="/images/favicon.png"/>
 			<link rel="stylesheet" href="/css/styles.css"/>
 			<script src="/js/htmx.min.js"></script>
 		</head>
