--- a/pkg/pages/root.templ
+++ b/pkg/pages/root.templ
@@ -1,6 +1,7 @@
 package pages
 
 import "golang.org/x/text/message"
+import c "core/pkg/components"
 
 func welcome(p *message.Printer) string {
 	return p.Sprintf("Welcome to ")
@@ -15,9 +16,12 @@ func description(p *message.Printer) string {
 }
 
 templ Root(p *message.Printer) {
+	@c.MainContent() {
 		<h1
-		class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl dark:text-white">
-		{ welcome(p) } <span class="text-emerald-600">{ title(p) }</span>
-	</h1>
-	<p class="text-gray-500 dark:text-gray-400">{ description(p) }</p>
-} 
+			class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl dark:text-white"
+		>
+			{ welcome(p) } <span class="text-emerald-600">{ title(p) }</span>
+		</h1>
+		<p class="text-gray-500 dark:text-gray-400">{ description(p) }</p>
+	}
+}
